--- a/jenkinsfile
+++ b/jenkinsfile
@@ -11,6 +11,7 @@ pipeline{
         }
         stage('apply deployment to minikube'){
             steps{
+                sh "kubectl apply -f namespace-dev.json"
                 sh "kubectl apply -f deployment.yaml"
                 sh "kubectl apply -f service.yaml"
             }
