--- a/jenkinsfile
+++ b/jenkinsfile
@@ -11,9 +11,9 @@ pipeline{
         }
         stage('apply deployment to minikube'){
             steps{
-                sh "minikube -- kubectl apply -f namespace-dev.json"
-                sh "minikube -- kubectl apply -f deployment.yaml"
-                sh "minikube -- kubectl apply -f service.yaml"
+                sh "minikube  kubectl -- apply -f namespace-dev.json"
+                sh "minikube  kubectl --  apply -f deployment.yaml"
+                sh "minikube  kubectl -- apply -f service.yaml"
             }
         }
     }
