--- a/jenkinsfile
+++ b/jenkinsfile
@@ -26,7 +26,7 @@ pipeline{
         }
         stage('docker build'){
             steps{
-                git credentialsId: 'xgen_github', branch: "${params.name.BRANCH}", url: 'https://github.com/xgenOsama/BackHouseM.git'
+                git credentialsId: 'xgen_github', branch: "${params.BRANCH}", url: 'https://github.com/xgenOsama/BackHouseM.git'
                 sh "docker build . -t xgenosama/backhouse"
             }
         }
@@ -35,7 +35,7 @@ pipeline{
                 withCredentials([string(credentialsId: 'my_docker_hub_password', variable: 'DockerHubPwd')]) {
                     sh "docker login -u xgenosama -p ${DockerHubPwd}"
                 }
-                git credentialsId: 'xgen_github', branch: "${params.name.BRANCH}", url: 'https://github.com/xgenOsama/BackHouseM.git'
+                git credentialsId: 'xgen_github', branch: "${params.BRANCH}", url: 'https://github.com/xgenOsama/BackHouseM.git'
                 sh "docker push  xgenosama/backhouse"
             }
         }
