--- a/jenkinsfile
+++ b/jenkinsfile
@@ -8,7 +8,7 @@ pipeline{
             steps{
                 // git credentialsId: 'xgen_github', url: 'https://github.com/xgenOsama/BackHouseM.git'
                // git credentialsId: 'xgen_github', branch: "master", url: 'https://github.com/xgenOsama/BackHouseM.git'
-                //checkout scm: [$class: 'MercurialSCM', source: 'https://github.com/xgenOsama/BackHouseM', clean: true]
+                checkout scm
                 sh "git checkout -b ${params.BRANCH}"
             }
         }
