--- a/jenkinsfile
+++ b/jenkinsfile
@@ -58,7 +58,7 @@ pipeline{
                                 sh "kubectl apply -f namespace.yaml"
                                 sh "kubectl apply -f deployment.yaml"
                                 sh "kubectl apply -f service.yaml"
-                            }else if(params.ACTION == 'delete'){
+                            }else if(params.ACTION == 'destroy'){
                                 sh "kubectl delete -f namespace.yaml"
                                 sh "kubectl delete -f deployment.yaml"
                                 sh "kubectl delete -f service.yaml"
