check sonar qube

--- a/jenkinsfile
+++ b/jenkinsfile
@@ -15,6 +15,18 @@ pipeline{
 
             }
         }
+        stage('SonarQube Analysis'){
+            steps{
+                script{
+                    if(params.BRANCH == "master"){
+                        def mvnHome =  tool name: 'maven 3', type: 'maven'
+                        withSonarQubeEnv('sonar-9') { 
+                            sh "${mvnHome}/bin/mvn sonar:sonar"
+                        }
+                    }
+                }
+            }
+        }
         stage('docker build'){
 
             steps{
