check sonar qube

--- a/jenkinsfile
+++ b/jenkinsfile
@@ -17,10 +17,11 @@ pipeline{
         }
         stage('SonarQube Analysis'){
             steps{
+                scannerHome = tool 'sonar-9'
                 script{
                     if(params.BRANCH == "master"){
                         withSonarQubeEnv('sonar-9') { 
-                            sh "index.html sonar:sonar"
+                             sh "${scannerHome}/bin/sonar-scanner"
                         }
                     }
                 }
