check sonar quebe

--- a/jenkinsfile
+++ b/jenkinsfile
@@ -15,6 +15,14 @@ pipeline{
 
             }
         }
+        stage('check code quality'){
+            steps{
+                def scannerHome = tool 'sonarQubeSacnner4';
+                withSonarQubeEnv('sonar-9') { 
+                      sh "${scannerHome}/bin/sonar-scanner ."
+                }
+            }
+        }
         stage('docker build'){
 
             steps{
