check sonar quebe

--- a/jenkinsfile
+++ b/jenkinsfile
@@ -18,7 +18,7 @@ pipeline{
         stage('check code quality'){
             def scannerHome = tool 'sonarQubeSacnner4';
             withSonarQubeEnv('sonar-9') { 
-                sh "${scannerHome}/bin/sonar-scanner ."
+                sh "${scannerHome}/bin/sonar-scanner"
             }   
         }
         stage('docker build'){
